# MPS

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: application.h  material.h  utils.h
src/: application.cpp  main.cpp  material.cpp  utils.cpp
